@@ -5,8 +5,6 @@ cmake_minimum_required(VERSION 3.5.1)
 project(ImVulkanShader)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_SKIP_RPATH ON)
-set(CMAKE_MACOSX_RPATH 0)
 if (POLICY CMP0054)
     cmake_policy(SET CMP0054 NEW)
 endif()
